--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.6+4
   uuid: ^3.0.7
   restart_app: ^1.1.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
