--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   uuid: ^3.0.7
   restart_app: ^1.1.2
   intl: ^0.18.1
+  firebase_auth: ^4.6.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
