--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,10 @@ dependencies:
   image_picker: ^0.8.6+4
   uuid: ^3.0.7
   restart_app: ^1.1.2
-  intl: ^0.18.1
+  intl: ^0.18.0
   firebase_auth: ^4.6.2
   provider: ^6.0.5
+  firebase_ui_firestore: ^1.5.2
 
 dev_dependencies:
   flutter_test:
